tests/parser/bad/lib/lmodule-library-cid-type-cid-with.scillib
library TestLib

(* 'equals' should be '=' *)

type House equals
| Kind of String
